# axum-htmx-playground

./: Cargo.toml  flake.nix
assets/: style.css
src/: main.rs
templates/: base.html  entries.html  entry.html  index.html  notification.html
